--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "arcanedev/log-viewer": "~3.0",
         "arcanedev/no-captcha": "~3.0",
         "spatie/laravel-backup": "^3.0",
-        "yajra/laravel-datatables-oracle": "~6.0"
+        "yajra/laravel-datatables-oracle": "~6.0",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -25,7 +26,8 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-debugbar": "^2.1",
-        "laracasts/generators": "^1.1"
+        "laracasts/generators": "^1.1",
+        "barryvdh/laravel-ide-helper": "^2."
     },
     "autoload": {
         "classmap": [
@@ -56,6 +58,9 @@
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
+            // "php artisan ide-helper:models",
+            "php artisan ide-helper:meta",
             "php artisan optimize"
         ]
     },
